--- a/index.html
+++ b/index.html
@@ -1,33 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    <title>Zachra Portofolio-Hitlab</title>
+    <title>Hello Word</title>
 </head>
 <body>
-    <header>
-        <a href="#"class="logo">Zachra Fitri</a>
-        <nav>
-            <a href="#"class="active">Home</a>
-            <a href="#">About</a>
-            <a href="#">Skill</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
-    <section class="home">
-        <div class="home-img">
-            <img src="Images/main.jpg"alt="">
-        </div>
-        <div class="home-content">
-            <h1>Hallo, I'm<span>Zachra Fitri</span></h1>
-            <h2 class="typing-text">I'm a<span></span></h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem quos quasi iusto voluptatem. Animi, ipsam iste rerum sapiente cupiditate quis cum, commodi quam dolorum obcaecati delectus ex soluta fuga saepe!</p>
-            <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            </div>
-        </div>
-    </section>
+    <h1>Sata Zachra Fitri Fauziah</h1>
+    <p>Saya peserta Tech Class Web Dev 2026!</p>
 </body>
 </html>
