--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Hello Word</title>
 </head>
 <body>
-    <h1>Sata Zachra Fitri Fauziah</h1>
+    <h1>Saya Zachra Fitri Fauziah</h1>
     <p>Saya peserta Tech Class Web Dev 2026!</p>
 </body>
 </html>
+
