--- a/Index.html
+++ b/Index.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <title>Zachra Portofolio-Hitlab</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    <header>
-        <a href="#"class="logo">Zachra Fitri</a>
-        <nav>
-            <a href="#"class="active">Home</a>
-            <a href="#">About</a>
-            <a href="#">Skill</a>
-            <a href="#">Contact</a>
+    <header class="header">
+        <a href="#"class="logo">Portofolio</a>
+        <nav class="navbar">
+            <a href="#" style="--i:1;" class="active">Home</a>
+            <a href="#" style="--i:2;">About</a>
+            <a href="#" style="--i:3;">Skill</a>
+            <a href="#" style="--i:4;">Contact</a>
         </nav>
     </header>
+
     <section class="home">
-        <div class="home-img">
-            <img src="Images/main.jpg"alt="">
+        <div class="home-sci">
+            <a href="#"><box-icon type='logo' name='instagram'></box-icon></a>
+            <a href="#"><box-icon name='linkedin-square' type='logo' ></box-icon></a>
+            <a href="#"><box-icon name='github' type='logo' ></box-icon></a>
         </div>
+
         <div class="home-content">
-            <h1>Hallo, I'm<span>Zachra Fitri</span></h1>
-            <h2 class="typing-text">I'm a<span></span></h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem quos quasi iusto voluptatem. Animi, ipsam iste rerum sapiente cupiditate quis cum, commodi quam dolorum obcaecati delectus ex soluta fuga saepe!</p>
-            <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <h1>Hi, I'm Zachra Fitri Fauziah</h1>
+            <h3>Undergraduate Information System</h3>
+            <p>Mahasiswi Sistem Informasi yang sedang memperdalam ilmu tentang WebDev dari bootcamp yang sedang diikuti.</p>
+            <h4>Bridging Technology and Business Through Smart Solutions</h4>
+            <p>
+                <button id="modeBtn" class="button-terang" onclick="warnaberubah()">Dark</button>
+            </p>
+        </div>
+
+        <div class="home-img">
+            <div class="glowing-circle">
+                <span></span>
+                <span></span>
+                <div class="image">
+                    <img src="images/main.jpg" alt="">
+                </div>
             </div>
         </div>
     </section>
+    <script src="js/main.js"></script>
+    
 </body>
 </html>
