--- a/Index.html
+++ b/Index.html
@@ -21,11 +21,12 @@
         </nav>
     </header>
 
+/* HERO SECTION */
     <section class="home">
         <div class="home-sci">
-            <a href="#"><box-icon type='logo' name='instagram'></box-icon></a>
-            <a href="#"><box-icon name='linkedin-square' type='logo' ></box-icon></a>
-            <a href="#"><box-icon name='github' type='logo' ></box-icon></a>
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+            <a href="#"><i class="bx bxl-github"></i></a>
         </div>
 
         <div class="home-content">
@@ -48,7 +49,7 @@
             </div>
         </div>
     </section>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
     
 </body>
 </html>
